# llm-as-learning-planer

./: .env.example  .gitignore  README.md  background_example.txt  goal_example.txt  plan_deepseek32.md  plan_deepseek32_week1_2.md  plan_deepseek_32_speciale.md  plan_deepseek_32_speciale_week1_2.md  pyproject.toml
docs/: technical-design.md
prompts/: compare_plans.md  critical_think.md  daily_plan.md  final_plan.md  initial_plan.md
src/: cli.py  config.py  model_client.py  prompt_manager.py  workflow.py
