[project]
name = "llm-as-learning-planer"
version = "0.1.0"
description = "A tool to generate personalized learning plans using large language models"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-deepseek>=0.1.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
    "socksio>=1.0.0",
]

[project.scripts]
planer = "src.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple"
